--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: DataDrivenSecFirehol
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Search a host IP to check wether it's been under any campaing (malware, botnet) and check where it matches.
+Version: 1.0.0
+Author: Pol S., Guillem G., Jeffrey M.
+Maintainer: The package maintainer will be <solapol94@gmail.com>
+Description: This package can be used in many enviroments where the analyst need more information about a given IP.
+    Will allow you to query a huge amount the data withing seconds since all is collected/build at first to later on be able to query it.
+License: GPL-2
 Encoding: UTF-8
-LazyData: true
 Imports:
     dplyr,
     iptools,
-    stringr
+    stringr,
+    rmarkdown,
+    tidyr
