--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: DataDrivenSecFirehol
 Type: Package
 Title: Search a host IP to check wether it's been under any campaing (malware, botnet) and check where it matches.
 Version: 1.0.0
-Author: Pol S., Guillem G., Jeffrey M.
+Author: person("Guillem", "Gordillo", email = "topota@mad.re",
+  role = c("aut", "cre"))
 Maintainer: The package maintainer will be <solapol94@gmail.com>
 Description: This package can be used in many environments where the analyst needs more information about a given IP.
   Will allow you to carry a huge amount the data within seconds for all is collected/build at first to later on be able to use it.
@@ -18,3 +19,4 @@ Imports:
     stringr,
     rmarkdown,
     tidyr
+RoxygenNote: 6.0.1
