added new functions for apply mergedfs2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,6 @@ export(list.iprelated.dataset)
 export(mergeDFs)
 export(tidyDataCountries)
 export(tidyDataIPs)
+export(mergeDFs2)
+export(ips_merge)
+export(look_countries)
