--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,16 @@
 
 export(downloadFireHolData)
 export(getDataFrame)
+export(ips_merge)
 export(list.category)
+export(list.category.count)
 export(list.country)
 export(list.country.count)
 export(list.ip.count)
 export(list.iprelated.dataset)
+export(look_countries)
+export(look_countries2)
 export(mergeDFs)
+export(mergeDFs2)
 export(tidyDataCountries)
 export(tidyDataIPs)
-export(mergeDFs2)
-export(ips_merge)
-export(look_countries)
